--- a/src/App.css
+++ b/src/App.css
@@ -103,20 +103,20 @@ span {
   }
 }
 
-@keyframes anime {
-  from {
-  -webkit-transform: translate3d(0, 0, 0);
-  transform: translate3d(0, 0, 0);
-}
 
-to {
-  visibility: hidden;
-  -webkit-transform: translate3d(0, -100%, 0);
-  transform: translate3d(0, -100%, 0);
-}}
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+    }
+  
+    to {
+      opacity: 1;
+    }
+  }
+
 
 .nav-close {
-  animation: anime .8s ease-in-out forwards;
+  animation: fadeIn .8s ease-in-out forwards;
   /* display: none; */
 } 
 
