--- a/src/App.css
+++ b/src/App.css
@@ -91,9 +91,33 @@ span {
   /* display: block; */
 }
 
+@keyframes slideInRight {
+    /* {
+    -webkit-transform: translate3d(100%, 0, 0);
+    transform: translate3d(100%, 0, 0);
+    visibility: visible;
+  } */
+
+  to {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+
+  from {
+    -webkit-transform: translate3d(100%, 0, 0);
+    transform: translate3d(100%, 0, 0);
+    visibility: visible;
+  }
+
+  to {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+}
 
 .nav-open {
-  display: block;
+  animation: slideInRight 1s ease-in-out forwards;
+  /* display: block; */
 } 
 
 
