--- a/src/App.css
+++ b/src/App.css
@@ -116,8 +116,8 @@ span {
 }
 
 .nav-open {
-  animation: slideInRight 1s ease-in-out forwards;
-  /* display: block; */
+  /* animation: slideInRight 1s ease-in-out forwards; */
+  display: block;
 } 
 
 
@@ -135,8 +135,8 @@ span {
 }
 
 .nav-close {
-  animation: slideOutRight 1s ease-in forwards;
-  /* display: none; */
+  /* animation: slideOutRight 1s ease-in forwards; */
+  display: none;
 } 
 
 
